AX: aria-selected-menu-items test is flaky in ITM mode https://bugs.webkit.org/show_bug.cgi?id=260278 rdar://113979223

Reviewed by Chris Fleizach.

This change fixes aria-selected-menu-items in isolated tree mode by adding a traversal up for the newly selected child so that its ancestor
also updates its SelectedChildren property.
The traversal happens during a new case in AXObjectCache::updateIsolatedTree where the notification AXMenuListItemSelected is now handled.

* LayoutTests/accessibility-isolated-tree/TestExpectations

* LayoutTests/accessibility/aria-selected-menu-items.html
* LayoutTests/platform/mac/accessibility/aria-selected-menu-items-expected.txt
* LayoutTests/platform/glib/accessibility/aria-selected-menu-items-expected.txt

Tests updated to be async for ITM.

* Source/WebCore/accessibility/AXObjectCache.cpp
(WebCore::AXObjectCache::updateIsolatedTree):

Logic to handle AXMenuListItemSelected notifications.

* Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.cpp

Handle AXPropertyName::SelectedChildren in updateNodeProperties.

Canonical link: https://commits.webkit.org/267221@main